--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,13 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    width: 100%;
+}
+
+@media (min-width:768px) {
+	#breadcrumb {
+		width: calc(50% - 80px);
+	}
 }
 
 /* Display list items side by side */
@@ -106,7 +112,7 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 100%;
   background-color: #3397DB;
   align-items: center;
 }
@@ -116,6 +122,7 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+	padding: 10px 0 0;
 }
 .filter-options select {
   background-color: white;
@@ -136,6 +143,9 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -145,7 +155,7 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  width: 75%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -189,14 +199,27 @@ nav h1 a {
   width: 100%;
   z-index: 1000;
 }
+
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+	position: static;
+	margin-top: 131px;
+	width: 100%;
+	height: 400px;
 }
+
+@media (min-width:768px) {
+	.inside #map-container {
+	  background: blue none repeat scroll 0 0;
+	  height: 87%;
+	  position: fixed;
+	  right: 0;
+	  top: 80px;
+		margin-top: 0;
+	  width: 50%;
+	}
+}
+
 .inside #map {
   background-color: #ccc;
   height: 100%;
@@ -204,9 +227,17 @@ nav h1 a {
 }
 .inside #footer {
   bottom: 0;
-  position: absolute;
-  width: 50%;
+	position:relative;
+  width: 100%;
+	padding: 25px 0;
 }
+@media (min-width:768px) {
+	.inside #footer {
+		width: 50%;
+		position: absolute;
+	}
+}
+
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
@@ -216,14 +247,40 @@ nav h1 a {
   margin: 15px 0 30px;
   text-transform: uppercase;
   line-height: 1.1;
+	padding: 0 40px;
 }
+@media (min-width:768px) {
+	#restaurant-name {
+		padding: 0;
+	}
+}
+
 #restaurant-img {
-	width: 90%;
+	width: 100%;
 }
+
+@media (min-width: 768px) {
+	#restaurant-img {
+		width: 90%;
+	}
+}
+
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
 }
+
+#restaurant-address, #restaurant-hours {
+	padding:0 40px;
+}
+
+@media (min-width:768px) {
+	#restaurant-address, #restaurant-hours {
+		padding: 0;
+	}
+}
+
+
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
@@ -234,17 +291,45 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
 }
-#restaurant-container, #reviews-container {
+
+@media (min-width: 768px) {
+	#restaurant-cuisine {
+		width: 90%;
+	}
+}
+
+
+
+#restaurant-container {
+	border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #fff;
+  width:100%;
+}
+
+#reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  width: calc(100% - 80px);
 }
+
+@media (min-width:768px) {
+	#restaurant-container {
+		padding: 140px 40px 30px;
+	  width: 45%;
+	}
+
+	#reviews-container {
+		padding: 140px 40px 30px;
+	  width: 45%;
+	}
+}
+
 #reviews-container {
   padding: 30px 40px 80px;
 }
+
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
